crates/test-ui/ui/invalid_msg_send_super.stderr
error[E0433]: too many leading `super` keywords
 --> ui/invalid_msg_send_super.rs
  |
  |     let _: () = unsafe { msg_send![super, init] };
  |                                    ^^^^^ there are too many leading `super` keywords

error[E0433]: too many leading `super` keywords
 --> ui/invalid_msg_send_super.rs
  |
  |     let _: () = unsafe { msg_send![super(), init] };
  |                                    ^^^^^ there are too many leading `super` keywords

error[E0433]: too many leading `super` keywords
 --> ui/invalid_msg_send_super.rs
  |
  |     let _: () = unsafe { msg_send![super(obj,), init] };
  |                                    ^^^^^ there are too many leading `super` keywords

error[E0433]: too many leading `super` keywords
 --> ui/invalid_msg_send_super.rs
  |
  |     let _: () = unsafe { msg_send![super(obj, superclass,), init] };
  |                                    ^^^^^ there are too many leading `super` keywords
